# boids

./: Cargo.toml
src/: compute.wgsl  data_structure.rs  draw.wgsl  main.rs
