[package]
name = "boids"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-executor = "1.5.0"
bytemuck = "1.13.0"
env_logger = "0.10.0"
log = "0.4.17"
nanorand = "0.7.0"
pollster = "0.2.5"
wgpu = "0.15.0"
winit = "0.28.1"
